--- a/estilos/style.css
+++ b/estilos/style.css
@@ -305,7 +305,7 @@ footer > a {
     text-decoration: none;
 }
 
-footer > a:hover {
+footer > p > a:hover {
     text-decoration: none;
     color: #AC04C2;
     letter-spacing: 2px;
