--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,13 +16,14 @@
 }
 
 html, body {
-    margin: auto;
-    min-height: 100%;
-    min-width: 100%;
-    
-    
+    margin: auto;    
     background-color: rgba(0, 0, 0, 0.479);
     font-family: var(--fonte1);
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
 }
 
 header {
